@@ -17,11 +17,12 @@
 
 package org.apache.camel.quarkus.component.kudu.it;
 
+import java.io.File;
 import java.io.IOException;
-import java.nio.charset.Charset;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Collections;
 import java.util.Map;
 import java.util.function.Consumer;
 
@@ -30,13 +31,12 @@ import com.github.dockerjava.api.model.ExposedPort;
 import com.github.dockerjava.api.model.HostConfig;
 import com.github.dockerjava.api.model.Ports;
 import io.quarkus.test.common.QuarkusTestResourceLifecycleManager;
-import org.apache.camel.quarkus.component.kudu.it.kerby.KerbyServer;
 import org.apache.camel.util.CollectionHelper;
-import org.apache.kerby.kerberos.kerb.KrbException;
 import org.eclipse.microprofile.config.ConfigProvider;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.testcontainers.DockerClientFactory;
+import org.testcontainers.containers.Container;
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.Network;
 import org.testcontainers.containers.output.Slf4jLogConsumer;
@@ -45,9 +45,7 @@ import org.testcontainers.images.builder.ImageFromDockerfile;
 import org.testcontainers.utility.MountableFile;
 import org.testcontainers.utility.TestcontainersConfiguration;
 
-import static org.apache.camel.quarkus.component.kudu.it.KuduInfrastructureTestHelper.DOCKER_HOST;
 import static org.apache.camel.quarkus.component.kudu.it.KuduInfrastructureTestHelper.KUDU_TABLET_NETWORK_ALIAS;
-import static org.apache.camel.quarkus.component.kudu.it.KuduRoute.KUDU_AUTHORITY_CONFIG_KEY;
 
 public class KuduTestResource implements QuarkusTestResourceLifecycleManager {
     private static final Logger LOG = LoggerFactory.getLogger(KuduTestResource.class);
@@ -60,10 +58,11 @@ public class KuduTestResource implements QuarkusTestResourceLifecycleManager {
 
     private GenericContainer<?> masterContainer;
     private GenericContainer<?> tabletContainer;
+    private GenericContainer<?> kerby;
 
-    private KerbyServer kdcServer;
-
-    private String kerbyDir;
+    //    private KerbyServer kdcServer;
+    //
+    //    private String kerbyDir;
 
     @Override
     public Map<String, String> start() {
@@ -72,34 +71,69 @@ public class KuduTestResource implements QuarkusTestResourceLifecycleManager {
         Network kuduNetwork = Network.newNetwork();
 
         try {
-            //create tmp dir for kerberos server
-            kerbyDir = getClass().getResource("/kerby").getFile();
+            kerby = new GenericContainer<>("coheigea/kerby")
+                    .withExposedPorts(88)
+                    .withCopyToContainer(MountableFile.forClasspathResource("kerbyDocker/kerby-data"), "/kerby-data")
+                    .withNetwork(kuduNetwork)
+                    .withLogConsumer(new Slf4jLogConsumer(LOG));
+            kerby.start();
 
-            //start kerby
-            kdcServer = new KerbyServer();
-            kdcServer.startServer(kerbyDir);
+            //create principals
+            exportPrincipal("kudu/user");
+            exportPrincipal("kudu/kudu-master");
+            exportPrincipal("localhost");
+            exportPrincipal("kudu/localhost");
+            exportPrincipal("kudu");
+            exportPrincipal("kudu/" + KUDU_MASTER_NETWORK_ALIAS);
+            exportPrincipal("kudu/" + KUDU_TABLET_NETWORK_ALIAS);
 
-            kdcServer.createPrincipal("kudu/user@EXAMPLE.COM", "changeit");
-            kdcServer.createPrincipal("localhost@EXAMPLE.COM", "changeit");
-            kdcServer.createPrincipal("kudu/localhost@EXAMPLE.COM", "changeit");
-            kdcServer.createPrincipal("kudu@EXAMPLE.COM", "changeit");
-            kdcServer.createPrincipal("kudu/" + KUDU_MASTER_NETWORK_ALIAS + "@EXAMPLE.COM",
-                    "changeit"); //equivalent to hostname of container
-            kdcServer.createPrincipal("kudu/" + KUDU_TABLET_NETWORK_ALIAS + "@EXAMPLE.COM",
-                    "changeit");
-            kdcServer.exportPrincipals("principals.keytab");
+            //localhost
 
-            //replace "localhost" in krb5.conf with ip address
-            Path path = Path.of(getClass().getResource("/kerby/krb5.conf").getFile());
-            Charset charset = StandardCharsets.UTF_8;
+            //copy keytab from container to the host
+            //create kerby folder in target
+            File kerbyFolder = Paths.get("target/kerby").toFile();
+            if(!kerbyFolder.exists()) {
+                kerbyFolder.mkdir();
+            }
+            //copy krb.conf there with the proper port
+            String krb5conf = Files.readString(Paths.get("target/test-classes/kerbyDocker/krb5.conf"));
+            String krb5conf2 = krb5conf.replaceAll("88", kerby.getMappedPort(88) + "");
+            Files.writeString(kerbyFolder.toPath().resolve("krb5.conf"), krb5conf);
+            Files.writeString(kerbyFolder.toPath().resolve("krb5.conf2"), krb5conf2);
 
-            String content = new String(Files.readAllBytes(path), charset);
-            content = content.replaceAll("localhost", IpAddressHelper.getHost4Address());
-            //            content = content.replaceAll("default_realm = EXAMPLE.COM",
-            //                    "default_realm = EXAMPLE.COM\n   allow_weak_crypto = true");
-            Files.write(path, content.getBytes(charset));
 
-        } catch (IOException | KrbException e) {
+            kerby.copyFileFromContainer("/kerby-data/keytabs/kudu.keytabs", "target/test-classes/kerby/principals3.keytab");
+
+            //            //create tmp dir for kerberos server
+            //            kerbyDir = getClass().getResource("/kerby").getFile();
+            //
+            //            //start kerby
+            //            kdcServer = new KerbyServer();
+            //            kdcServer.startServer(kerbyDir);
+            //
+            //            kdcServer.createPrincipal("kudu/user@EXAMPLE.COM", "changeit");
+            //            kdcServer.createPrincipal("localhost@EXAMPLE.COM", "changeit");
+            //            kdcServer.createPrincipal("kudu/localhost@EXAMPLE.COM", "changeit");
+            //            kdcServer.createPrincipal("kudu@EXAMPLE.COM", "changeit");
+            //            kdcServer.createPrincipal("kudu/" + KUDU_MASTER_NETWORK_ALIAS + "@EXAMPLE.COM",
+            //                    "changeit"); //equivalent to hostname of container
+            //            kdcServer.createPrincipal("kudu/" + KUDU_TABLET_NETWORK_ALIAS + "@EXAMPLE.COM",
+            //                    "changeit");
+            //            kdcServer.exportPrincipals("principals.keytab");
+
+            //            //replace "localhost" in krb5.conf with ip address
+            //            Path path = Path.of(getClass().getResource("/kerby/krb5.conf").getFile());
+            //            Charset charset = StandardCharsets.UTF_8;
+            //
+            //            String content = new String(Files.readAllBytes(path), charset);
+            //            content = content.replaceAll("localhost", IpAddressHelper.getHost4Address());
+            //            //            content = content.replaceAll("default_realm = EXAMPLE.COM",
+            //            //                    "default_realm = EXAMPLE.COM\n   allow_weak_crypto = true");
+            //            Files.write(path, content.getBytes(charset));
+
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        } catch (InterruptedException e) {
             throw new RuntimeException(e);
         }
 
@@ -113,7 +147,7 @@ public class KuduTestResource implements QuarkusTestResourceLifecycleManager {
                         "--keytab_file=/home/kudu/principals.keytab " +
                         "--allow_world_readable_credentials=true " + //https://kudu.apache.org/docs/prior_release_notes.html
                         "--stderrthreshold=0 ")
-                .withCopyToContainer(MountableFile.forClasspathResource("kerby/krb5.conf"),
+                .withCopyToContainer(MountableFile.forHostPath("target/kerby/krb5.conf2"),
                         "/etc/krb5.conf")
                 .withNetwork(kuduNetwork)
                 .withNetworkAliases(KUDU_MASTER_NETWORK_ALIAS)
@@ -122,7 +156,7 @@ public class KuduTestResource implements QuarkusTestResourceLifecycleManager {
                     cmd.withHostName(KUDU_MASTER_NETWORK_ALIAS);
                 })
                 .waitingFor(Wait.forListeningPort());
-        masterContainer.start();
+                masterContainer.start();
 
         // Force host name and port, so that the tablet container is accessible from KuduResource, KuduTest and KuduIT.
         Consumer<CreateContainerCmd> consumer = cmd -> {
@@ -146,7 +180,7 @@ public class KuduTestResource implements QuarkusTestResourceLifecycleManager {
                         "--keytab_file=/home/kudu/principals.keytab " +
                         "--allow_world_readable_credentials=true " + //https://kudu.apache.org/docs/prior_release_notes.html
                         "--stderrthreshold=0 ")
-                .withCopyToContainer(MountableFile.forClasspathResource("kerby/krb5.conf"),
+                .withCopyToContainer(MountableFile.forHostPath("target/kerby/krb5.conf"),
                         "/etc/krb5.conf")
                 .withExposedPorts(KUDU_MASTER_RPC_PORT, KUDU_MASTER_HTTP_PORT)
                 .withEnv("KUDU_MASTERS", KUDU_MASTER_NETWORK_ALIAS)
@@ -156,33 +190,58 @@ public class KuduTestResource implements QuarkusTestResourceLifecycleManager {
                 .withCreateContainerCmdModifier(consumer)
                 .withLogConsumer(new Slf4jLogConsumer(LOG))
                 .waitingFor(Wait.forListeningPort());
-        tabletContainer.start();
+//                tabletContainer.start();
 
-        // Print interesting Kudu servers connectivity information
-        final String masterRpcAuthority = masterContainer.getHost() + ":"
-                + masterContainer.getMappedPort(KUDU_MASTER_RPC_PORT);
-        //        final String masterRpcAuthority;
-        //        try {
-        //            masterRpcAuthority = IpAddressHelper.getHost4Address() + ":"
-        //                         + masterContainer.getMappedPort(KUDU_MASTER_RPC_PORT);
-        //        } catch (SocketException e) {
-        //            throw new RuntimeException(e);
-        //        }
+                // Print interesting Kudu servers connectivity information
+                final String masterRpcAuthority = masterContainer.getHost() + ":"
+                        + masterContainer.getMappedPort(KUDU_MASTER_RPC_PORT);
+                //        final String masterRpcAuthority;
+                //        try {
+                //            masterRpcAuthority = IpAddressHelper.getHost4Address() + ":"
+                //                         + masterContainer.getMappedPort(KUDU_MASTER_RPC_PORT);
+                //        } catch (SocketException e) {
+                //            throw new RuntimeException(e);
+                //        }
 
-        LOG.info("Kudu master RPC accessible at " + masterRpcAuthority);
-        final String masterHttpAuthority = masterContainer.getHost() + ":"
-                + masterContainer.getMappedPort(KUDU_MASTER_HTTP_PORT);
-        LOG.info("Kudu master HTTP accessible at " + masterHttpAuthority);
-        final String tServerRpcAuthority = tabletContainer.getHost() + ":"
-                + tabletContainer.getMappedPort(KUDU_TABLET_RPC_PORT);
-        LOG.info("Kudu tablet server RPC accessible at " + tServerRpcAuthority);
-        final String tServerHttpAuthority = tabletContainer.getHost() + ":"
-                + tabletContainer.getMappedPort(KUDU_TABLET_HTTP_PORT);
-        LOG.info("Kudu tablet server HTTP accessible at " + tServerHttpAuthority);
+                LOG.info("Kudu master RPC accessible at " + masterRpcAuthority);
+                final String masterHttpAuthority = masterContainer.getHost() + ":"
+                        + masterContainer.getMappedPort(KUDU_MASTER_HTTP_PORT);
+                LOG.info("Kudu master HTTP accessible at " + masterHttpAuthority);
+                final String tServerRpcAuthority = tabletContainer.getHost() + ":"
+                        + tabletContainer.getMappedPort(KUDU_TABLET_RPC_PORT);
+                LOG.info("Kudu tablet server RPC accessible at " + tServerRpcAuthority);
+                final String tServerHttpAuthority = tabletContainer.getHost() + ":"
+                        + tabletContainer.getMappedPort(KUDU_TABLET_HTTP_PORT);
+                LOG.info("Kudu tablet server HTTP accessible at " + tServerHttpAuthority);
 
-        return CollectionHelper.mapOf(
-                KUDU_AUTHORITY_CONFIG_KEY, masterRpcAuthority,
-                DOCKER_HOST, DockerClientFactory.instance().dockerHostIpAddress());
+                return CollectionHelper.mapOf(
+                        KuduRoute.KUDU_AUTHORITY_CONFIG_KEY, masterRpcAuthority,
+                        KuduInfrastructureTestHelper.DOCKER_HOST, DockerClientFactory.instance().dockerHostIpAddress());
+
+    }
+
+    private void exportPrincipal(String name) throws IOException, InterruptedException {
+        //user
+        assertExecResult(
+                kerby.execInContainer("sh", "/usr/local/kerby-2.0.2/bin/kadmin.sh", "/kerby-data/conf/", "-k",
+                        "/kerby-data/keytabs/admin.keytab", "-q", "addprinc -pw changeit " + name + "@EXAMPLE.COM"),
+                "Add kudu/user");
+        //export keytab
+        assertExecResult(
+                kerby.execInContainer("sh", "/usr/local/kerby-2.0.2/bin/kadmin.sh", "/kerby-data/conf/", "-k",
+                        "/kerby-data/keytabs/admin.keytab", "-q", "ktadd -k /kerby-data/keytabs/kudu.keytabs " + name),
+                "Export keytab");
+    }
+
+    private static void assertExecResult(Container.ExecResult res, String cmd) {
+        if (res.getExitCode() != 0) {
+            LOG.error("Command: " + cmd);
+            LOG.error("Stdout: " + res.getStdout());
+            LOG.error("Stderr: " + res.getStderr());
+            throw new RuntimeException("Command " + cmd + ") failed. " + res.getStdout());
+        } else {
+            LOG.debug("Command: " + cmd + " succeeded!");
+        }
     }
 
     @Override
@@ -194,16 +253,12 @@ public class KuduTestResource implements QuarkusTestResourceLifecycleManager {
             if (tabletContainer != null) {
                 tabletContainer.stop();
             }
+            if (kerby != null) {
+                kerby.stop();
+            }
         } catch (Exception ex) {
             LOG.error("An issue occurred while stopping the KuduTestResource", ex);
         }
 
-        try {
-            if (kdcServer != null) {
-                kdcServer.stopServer();
-            }
-        } catch (KrbException ex) {
-            LOG.error("An issue occurred while stopping the KerbyServer.", ex);
-        }
     }
 }
